--- a/src/gui/StatsWindow.fxml
+++ b/src/gui/StatsWindow.fxml
@@ -60,7 +60,10 @@
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font></Button>
-                  <AnchorPane />
+                  <AnchorPane>
+                     <children>
+                        <Button fx:id="_switchLevelButton" layoutX="52.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchLevel" prefHeight="50.0" prefWidth="100.0" text="See Level 2" />
+                     </children></AnchorPane>
                   <AnchorPane GridPane.rowIndex="6" />
                </children>
             </GridPane>
