--- a/src/gui/TutorialWindow.fxml
+++ b/src/gui/TutorialWindow.fxml
@@ -64,7 +64,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="_nextButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Next" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <Button fx:id="_nextButton" mnemonicParsing="false" onAction="#handleNextClick" prefHeight="50.0" prefWidth="100.0" text="Next" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
          </children>
