--- a/src/gui/PracticeWindow.fxml
+++ b/src/gui/PracticeWindow.fxml
@@ -12,19 +12,19 @@
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="166.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="364.0" minHeight="10.0" prefHeight="234.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="198.0" minHeight="10.0" prefHeight="183.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="364.0" minHeight="10.0" prefHeight="217.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <GridPane GridPane.rowIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="137.0" minWidth="0.0" prefWidth="0.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="550.0" minWidth="10.0" prefWidth="550.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="575.0" minWidth="10.0" prefWidth="575.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="0.0" prefWidth="0.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="330.0" minHeight="10.0" prefHeight="330.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="330.0" minHeight="10.0" prefHeight="181.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <GridPane GridPane.columnIndex="1">
@@ -34,60 +34,72 @@
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="68.0" minWidth="0.0" prefWidth="0.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="146.0" minWidth="10.0" prefWidth="115.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="_0" mnemonicParsing="false" onAction="#handle0Click" prefHeight="100.0" prefWidth="100.0" text="0" GridPane.halignment="CENTER">
+                  <Button fx:id="_0" mnemonicParsing="false" onAction="#handle0Click" prefHeight="80.0" prefWidth="80.0" text="0" GridPane.halignment="CENTER">
                      <font>
-                        <Font size="50.0" />
+                        <Font size="42.0" />
                      </font>
                   </Button>
-                  <Button fx:id="_1" mnemonicParsing="false" onAction="#handle1Click" prefHeight="100.0" prefWidth="100.0" text="1" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  <Button fx:id="_1" mnemonicParsing="false" onAction="#handle1Click" prefHeight="80.0" prefWidth="80.0" text="1" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <font>
-                        <Font size="50.0" />
+                        <Font size="42.0" />
                      </font>
                   </Button>
-                  <Button fx:id="_6" mnemonicParsing="false" onAction="#handle6Click" prefHeight="100.0" prefWidth="100.0" text="6" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <Button fx:id="_6" mnemonicParsing="false" onAction="#handle6Click" prefHeight="80.0" prefWidth="80.0" text="6" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <font>
-                        <Font size="50.0" />
+                        <Font size="42.0" />
                      </font>
                   </Button>
-                  <Button fx:id="_5" mnemonicParsing="false" onAction="#handle5Click" prefHeight="100.0" prefWidth="100.0" text="5" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <Button fx:id="_5" mnemonicParsing="false" onAction="#handle5Click" prefHeight="80.0" prefWidth="80.0" text="5" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <font>
-                        <Font size="50.0" />
+                        <Font size="42.0" />
                      </font>
                   </Button>
-                  <Button fx:id="_4" mnemonicParsing="false" onAction="#handle4Click" prefHeight="100.0" prefWidth="100.0" text="4" GridPane.columnIndex="4" GridPane.halignment="CENTER">
+                  <Button fx:id="_4" mnemonicParsing="false" onAction="#handle4Click" prefHeight="80.0" prefWidth="80.0" text="4" GridPane.columnIndex="4" GridPane.halignment="CENTER">
                      <font>
-                        <Font size="50.0" />
+                        <Font size="42.0" />
                      </font>
                   </Button>
-                  <Button fx:id="_3" mnemonicParsing="false" onAction="#handle3Click" prefHeight="100.0" prefWidth="100.0" text="3" GridPane.columnIndex="3" GridPane.halignment="CENTER">
+                  <Button fx:id="_3" mnemonicParsing="false" onAction="#handle3Click" prefHeight="80.0" prefWidth="80.0" text="3" GridPane.columnIndex="3" GridPane.halignment="CENTER">
                      <font>
-                        <Font size="50.0" />
+                        <Font size="42.0" />
                      </font>
                   </Button>
-                  <Button fx:id="_2" mnemonicParsing="false" onAction="#handle2Click" prefHeight="100.0" prefWidth="100.0" text="2" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                  <Button fx:id="_2" mnemonicParsing="false" onAction="#handle2Click" prefHeight="80.0" prefWidth="80.0" text="2" GridPane.columnIndex="2" GridPane.halignment="CENTER">
                      <font>
-                        <Font size="50.0" />
+                        <Font size="42.0" />
                      </font>
                   </Button>
-                  <Button fx:id="_9" mnemonicParsing="false" onAction="#handle9Click" prefHeight="100.0" prefWidth="100.0" text="9" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <Button fx:id="_9" mnemonicParsing="false" onAction="#handle9Click" prefHeight="80.0" prefWidth="80.0" text="9" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <font>
-                        <Font size="50.0" />
+                        <Font size="42.0" />
                      </font>
                   </Button>
-                  <Button fx:id="_8" mnemonicParsing="false" onAction="#handle8Click" prefHeight="100.0" prefWidth="100.0" text="8" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <Button fx:id="_8" mnemonicParsing="false" onAction="#handle8Click" prefHeight="80.0" prefWidth="80.0" text="8" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <font>
-                        <Font size="50.0" />
+                        <Font size="42.0" />
                      </font>
                   </Button>
-                  <Button fx:id="_7" mnemonicParsing="false" onAction="#handle7Click" prefHeight="100.0" prefWidth="100.0" text="7" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <Button fx:id="_7" mnemonicParsing="false" onAction="#handle7Click" prefHeight="80.0" prefWidth="80.0" text="7" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <font>
-                        <Font size="50.0" />
+                        <Font size="42.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="_41" mnemonicParsing="false" onAction="#handle4Click" prefHeight="80.0" prefWidth="80.0" text="Delete" GridPane.columnIndex="6" GridPane.halignment="CENTER">
+                     <font>
+                        <Font size="17.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="_42" mnemonicParsing="false" onAction="#handle4Click" prefHeight="80.0" prefWidth="80.0" text="Record" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                     <font>
+                        <Font size="16.0" />
                      </font>
                   </Button>
                </children>
@@ -107,7 +119,7 @@
          <children>
             <Label fx:id="_inputLabel" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
-                  <Font size="40.0" />
+                  <Font size="80.0" />
                </font>
             </Label>
          </children>
