--- a/src/gui/LevelSelectWindow.fxml
+++ b/src/gui/LevelSelectWindow.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -32,12 +33,14 @@
         <rowConstraints>
             <RowConstraints fillHeight="false" maxHeight="121.0" minHeight="86.0" prefHeight="87.0" vgrow="NEVER" />
             <RowConstraints fillHeight="false" maxHeight="109.0" minHeight="77.0" prefHeight="108.0" vgrow="NEVER" />
+            <RowConstraints fillHeight="false" maxHeight="109.0" minHeight="77.0" prefHeight="108.0" vgrow="NEVER" />
           <RowConstraints maxHeight="129.0" minHeight="65.0" prefHeight="114.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="_menuButton" buttonType="RAISED" onAction="#handleMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Menu" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_menuButton" buttonType="RAISED" onAction="#handleMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Menu" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
             <JFXButton fx:id="_level1" buttonType="RAISED" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
             <JFXButton fx:id="_level2" buttonType="RAISED" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+            <Button fx:id="_practice" mnemonicParsing="false" onAction="#handlePracticeClick" prefHeight="50.0" prefWidth="100.0" text="Practice" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
