--- a/src/gui/PracticeWindow.fxml
+++ b/src/gui/PracticeWindow.fxml
@@ -92,12 +92,12 @@
                         <Font size="42.0" />
                      </font>
                   </Button>
-                  <Button fx:id="_41" mnemonicParsing="false" onAction="#handle4Click" prefHeight="80.0" prefWidth="80.0" text="Delete" GridPane.columnIndex="6" GridPane.halignment="CENTER">
+                  <Button fx:id="_41" mnemonicParsing="false" onAction="#handleDeleteClick" prefHeight="80.0" prefWidth="80.0" text="Clear" GridPane.columnIndex="6" GridPane.halignment="CENTER">
                      <font>
-                        <Font size="17.0" />
+                        <Font size="19.0" />
                      </font>
                   </Button>
-                  <Button fx:id="_42" mnemonicParsing="false" onAction="#handle4Click" prefHeight="80.0" prefWidth="80.0" text="Record" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <Button fx:id="_42" mnemonicParsing="false" onAction="#handleRecordClick" prefHeight="80.0" prefWidth="80.0" text="Record" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <font>
                         <Font size="16.0" />
                      </font>
