--- a/src/gui/PracticeWindow.fxml
+++ b/src/gui/PracticeWindow.fxml
@@ -18,9 +18,9 @@
    <children>
       <GridPane GridPane.rowIndex="1">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="137.0" minWidth="0.0" prefWidth="0.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="575.0" minWidth="10.0" prefWidth="575.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="0.0" prefWidth="0.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" prefWidth="0.0" />
+            <ColumnConstraints hgrow="NEVER" maxWidth="575.0" minWidth="10.0" prefWidth="575.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" prefWidth="0.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="330.0" minHeight="10.0" prefHeight="181.0" vgrow="SOMETIMES" />
@@ -108,9 +108,9 @@
       </GridPane>
       <GridPane>
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="527.0" minWidth="10.0" prefWidth="72.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="527.0" minWidth="10.0" prefWidth="476.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="73.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="72.0" />
+          <ColumnConstraints hgrow="NEVER" maxWidth="527.0" minWidth="10.0" prefWidth="476.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="73.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="43.0" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
