--- a/src/gui/MainWindow.fxml
+++ b/src/gui/MainWindow.fxml
@@ -34,6 +34,6 @@
             <DropShadow blurType="ONE_PASS_BOX" />
          </effect>
       </Text>
-      <JFXButton fx:id="_mainMenuTutorial" buttonType="RAISED" onAction="#handleTutorialClick" prefHeight="50.0" prefWidth="100.0" text="Tutorial" textFill="WHITE" />
+      <JFXButton fx:id="_mainMenuTutorial" buttonType="RAISED" onAction="#handleTutorialClick" prefHeight="50.0" prefWidth="100.0" text="Tutorial" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
    </children>
 </GridPane>
