--- a/src/gui/LevelSelectWindow.fxml
+++ b/src/gui/LevelSelectWindow.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -14,8 +13,8 @@
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="600.0" prefWidth="600.0" />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints maxHeight="206.0" minHeight="0.0" prefHeight="141.0" vgrow="ALWAYS" />
-      <RowConstraints maxHeight="400.0" minHeight="194.0" prefHeight="259.0" vgrow="ALWAYS" />
+      <RowConstraints maxHeight="206.0" minHeight="0.0" prefHeight="168.0" vgrow="ALWAYS" />
+      <RowConstraints maxHeight="400.0" minHeight="194.0" prefHeight="332.0" vgrow="ALWAYS" />
    </rowConstraints>
    <children>
       <Label stylesheets="@TataiTheme.css" text="Level Select" textFill="WHITE">
@@ -40,7 +39,7 @@
             <JFXButton fx:id="_menuButton" buttonType="RAISED" onAction="#handleMenuButtonClick" prefHeight="50.0" prefWidth="100.0" text="Menu" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
             <JFXButton fx:id="_level1" buttonType="RAISED" onAction="#handleLevel1Click" prefHeight="50.0" prefWidth="100.0" text="Level 1" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
             <JFXButton fx:id="_level2" buttonType="RAISED" onAction="#handleLevel2Click" prefHeight="50.0" prefWidth="100.0" text="Level 2" textFill="#f8f8f8" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-            <Button fx:id="_practice" mnemonicParsing="false" onAction="#handlePracticeClick" prefHeight="50.0" prefWidth="100.0" text="Practice" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+            <JFXButton fx:id="_practice" buttonType="RAISED" onAction="#handlePracticeClick" prefHeight="50.0" prefWidth="100.0" text="Practice" textFill="#f8f8f8" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
          </children>
       </GridPane>
    </children>
