--- a/src/gui/TeacherInputNamingWindow.fxml
+++ b/src/gui/TeacherInputNamingWindow.fxml
@@ -17,9 +17,9 @@
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="189.0" minWidth="0.0" prefWidth="39.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="93.0" minHeight="10.0" prefHeight="87.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="189.0" minHeight="10.0" prefHeight="162.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="145.0" minHeight="10.0" prefHeight="145.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <JFXTextField fx:id="_textField" alignment="CENTER" focusColor="#cc0404" maxWidth="300.0" onKeyPressed="#handleTextFieldKeystroke" onKeyReleased="#handleTextFieldKeystroke" prefWidth="300.0" promptText="New List..." unFocusColor="#d0d0d0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
@@ -34,5 +34,10 @@
          </GridPane.margin>
       </Button>
       <JFXButton fx:id="_createButton" buttonType="RAISED" prefHeight="50.0" prefWidth="100.0" text="Create!" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
+      <Label fx:id="_warningLabel" text="A list under this name already exists." textFill="#cc0404" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets top="10.0" />
+         </GridPane.margin>
+      </Label>
    </children>
 </GridPane>
