--- a/src/gui/CustomListSelectionWindow.fxml
+++ b/src/gui/CustomListSelectionWindow.fxml
@@ -11,9 +11,9 @@
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.CustomListSelectionWindowController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="80.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="344.0" minWidth="10.0" prefWidth="320.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="38.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="538.0" minWidth="10.0" prefWidth="526.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="35.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="127.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
@@ -33,5 +33,6 @@
          </font>
       </Label>
       <JFXButton fx:id="_playButton" buttonType="RAISED" onAction="#handlePlayClick" prefHeight="50.0" prefWidth="100.0" text="Play" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+      <Label fx:id="_warningLabel" alignment="CENTER" prefHeight="25.0" prefWidth="543.0" text="You currently have no custom lists. These can be created in the teachers tab." textFill="#b50303" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
    </children>
 </GridPane>
