--- a/src/gui/TeacherInputNamingWindow.fxml
+++ b/src/gui/TeacherInputNamingWindow.fxml
@@ -3,7 +3,6 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,13 +12,13 @@
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TeacherInputNamingWindowController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="129.0" minWidth="0.0" prefWidth="107.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="550.0" minWidth="10.0" prefWidth="382.0" />
+      <ColumnConstraints hgrow="SOMETIMES" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="189.0" minWidth="0.0" prefWidth="110.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="93.0" minHeight="10.0" prefHeight="87.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="189.0" minHeight="10.0" prefHeight="162.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="145.0" minHeight="10.0" prefHeight="145.0" vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <JFXTextField fx:id="_textField" alignment="CENTER" focusColor="#cc0404" maxWidth="300.0" onKeyPressed="#handleTextFieldKeystroke" onKeyReleased="#handleTextFieldKeystroke" prefWidth="300.0" promptText="New List..." unFocusColor="#d0d0d0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
@@ -27,12 +26,10 @@
          <font>
             <Font size="30.0" />
          </font>
-      </Label>
-      <Button fx:id="_exitButton" mnemonicParsing="false" onAction="#handleExitCick" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
          <GridPane.margin>
-            <Insets left="10.0" top="10.0" />
+            <Insets />
          </GridPane.margin>
-      </Button>
+      </Label>
       <JFXButton fx:id="_createButton" buttonType="RAISED" onAction="#handleCreateClick" prefHeight="50.0" prefWidth="100.0" text="Create!" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
       <Label fx:id="_warningLabel" text="A list under this name already exists." textFill="#cc0404" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
          <GridPane.margin>
@@ -40,5 +37,10 @@
          </GridPane.margin>
       </Label>
       <JFXButton fx:id="_editButton" buttonType="RAISED" onAction="#handleEditClick" prefWidth="60.0" text="Edit" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+      <JFXButton fx:id="_exitButton" buttonType="RAISED" onAction="#handleExitCick" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets left="10.0" top="10.0" />
+         </GridPane.margin>
+      </JFXButton>
    </children>
 </GridPane>
