--- a/src/gui/TutorialWindow.fxml
+++ b/src/gui/TutorialWindow.fxml
@@ -82,7 +82,10 @@
                <effect>
                   <DropShadow color="WHITE" height="5.0" radius="2.0" spread="1.0" width="5.0" />
                </effect></ImageView>
-            <TextArea fx:id="_textArea" prefHeight="200.0" prefWidth="200.0" styleClass="root" />
+            <TextArea fx:id="_textArea" prefHeight="200.0" prefWidth="200.0" styleClass="root" text="Lorem ipsum">
+               <font>
+                  <Font size="20.0" />
+               </font></TextArea>
             <GridPane GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" />
