--- a/src/gui/StatsWindow.fxml
+++ b/src/gui/StatsWindow.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
@@ -39,7 +41,6 @@
                   <RowConstraints maxHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="20.0" prefHeight="69.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
@@ -55,16 +56,15 @@
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font></Button>
-                  <Button fx:id="_exitButton" mnemonicParsing="false" onAction="#handleExitButtonClick" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="exit" GridPane.rowIndex="5" />
                   <Button fx:id="_averageButton" mnemonicParsing="false" onAction="#handleAverageButtonClick" style="-: #383838;" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="\%88.8" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font></Button>
                   <AnchorPane>
                      <children>
-                        <Button fx:id="_switchLevelButton" layoutX="52.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchLevel" prefHeight="50.0" prefWidth="100.0" text="See Level 2" />
+                        <JFXButton fx:id="_switchLevelButton" buttonType="RAISED" layoutX="54.0" layoutY="24.0" onAction="#switchLevel" prefHeight="50.0" prefWidth="100.0" text="See Level 2" />
                      </children></AnchorPane>
-                  <AnchorPane GridPane.rowIndex="6" />
+                  <AnchorPane GridPane.rowIndex="5" />
                </children>
             </GridPane>
             <GridPane>
@@ -76,7 +76,7 @@
                 <RowConstraints vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label fx:id="_statLabel" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="88.8%" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                  <Label fx:id="_statLabel" style="-fx-effect:: dropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 );" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="88.8%" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                      <font>
                         <Font name="NanumGothic" size="130.0" />
                      </font>
@@ -120,5 +120,10 @@
             </Text>
          </children>
       </GridPane>
+      <JFXButton fx:id="_exitButton" buttonType="RAISED" onAction="#handleExitButtonClick" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets left="10.0" top="10.0" />
+         </GridPane.margin>
+      </JFXButton>
    </children>
 </GridPane>
