--- a/src/gui/StatsWindow.fxml
+++ b/src/gui/StatsWindow.fxml
@@ -47,19 +47,31 @@
                   <Button fx:id="_correctButton" mnemonicParsing="false" onAction="#handleCorrectButtonClick" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="correct" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="13.0" />
-                     </font></Button>
+                     </font>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect></Button>
                   <Button fx:id="_incorrectButton" mnemonicParsing="false" onAction="#handleIncorrectButtonClick" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="incorrect" GridPane.rowIndex="3">
                      <font>
                         <Font name="System Bold" size="13.0" />
-                     </font></Button>
+                     </font>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect></Button>
                   <Button fx:id="_totalButton" mnemonicParsing="false" onAction="#handleTotalButtonClick" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="total" GridPane.rowIndex="4">
                      <font>
                         <Font name="System Bold" size="13.0" />
-                     </font></Button>
+                     </font>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect></Button>
                   <Button fx:id="_averageButton" mnemonicParsing="false" onAction="#handleAverageButtonClick" style="-: #383838;" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="\%88.8" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="13.0" />
-                     </font></Button>
+                     </font>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect></Button>
                   <AnchorPane>
                      <children>
                         <JFXButton fx:id="_switchLevelButton" buttonType="RAISED" layoutX="54.0" layoutY="24.0" onAction="#switchLevel" prefHeight="50.0" prefWidth="100.0" text="See Level 2" />
@@ -76,10 +88,13 @@
                 <RowConstraints vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label fx:id="_statLabel" style="-fx-effect:: dropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 );" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="88.8%" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                  <Label fx:id="_statLabel" style="-fx-effect:: dropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 );" stylesheets="@StatisticsTheme.css" text="88.8%" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                      <font>
                         <Font name="NanumGothic" size="130.0" />
                      </font>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect>
                   </Label>
                   <Label fx:id="_statTitleLabel" text="TITLE" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.valignment="BOTTOM">
                      <font>
